# fbin

./: Cargo.toml  README.md
.github/workflows/: code-quality.yml
src/: main.rs
wix/: main.wxs
